examples/test/testpolicy8612.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy8612
  namespace: namespace269
spec:
  podSelector:
    matchLabels:
      key4: value14
      key27: value30
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key16: value21
          key47: value18
          key9: value16
      podSelector:
        matchLabels:
          key42: value9
          key12: value43
